# archivist-rag

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
sample_notes/: docker-basics.md  project-log.md  python-async.md  reading-notes.md  system-design.md
scripts/: ingest.py
src/: config.py  embeddings.py
src/generation/: chain.py  prompts.py
src/ingestion/: loader.py  pipeline.py  splitter.py
src/retrieval/: chain.py  multi_query.py  vectorstore.py
